add movie app 3.1

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ dist-ssr
 
 NetCoreApps/MvcMovie/MvcMovie/bin
 NetCoreApps/MvcMovie/MvcMovie/obj
+
+NetCoreApps/MvcMovie3.1/MvcMovie3.1/bin
+NetCoreApps/MvcMovie3.1/MvcMovie3.1/obj
