--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,5 @@ dist-ssr
 NetCoreApps/MvcMovie/MvcMovie/bin
 NetCoreApps/MvcMovie/MvcMovie/obj
 
-NetCoreApps/MvcMovie3.1/MvcMovie3.1/bin
-NetCoreApps/MvcMovie3.1/MvcMovie3.1/obj
+NetCoreApps/MvcMovie3.1/MvcMovie/bin
+NetCoreApps/MvcMovie3.1/MvcMovie/obj
