--- a/NetCoreApps/MvcMovie3.1/MvcMovie/MvcMovie.csproj
+++ b/NetCoreApps/MvcMovie3.1/MvcMovie/MvcMovie.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>MvcMovie3._1</RootNamespace>
+    <RootNamespace>MvcMovie</RootNamespace>
   </PropertyGroup>
 
 </Project>
