--- a/NetCoreApps/MvcMovie3.1/MvcMovie/Properties/launchSettings.json
+++ b/NetCoreApps/MvcMovie3.1/MvcMovie/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MvcMovie3._1": {
+    "MvcMovie": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
